# StockAnalyse

./: .env  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.local.json
.cursor/rules/: context7.mdc
LLM/: LLM_reports.py  __init__.py  app.py
analyze/: __init__.py  stock_data_fetcher.py  strategies.py  strategies_buffett.py
reports/: LLM_reports.py  README.md  __init__.py  app.py  demo.py  download_reports.py  fetch_reports.py  pdf_parser.py
results/: screened_stocks.csv
results/txt_reports/: 000001_平安银行_2015.txt  000001_平安银行_2016.txt  000001_平安银行_2017.txt  000001_平安银行_2018.txt  000001_平安银行_2019.txt  000001_平安银行_2020.txt  000001_平安银行_2021.txt  000001_平安银行_2022.txt  000001_平安银行_2023.txt  000001_平安银行_2024.txt
test/: README.md  __init__.py  conftest.py  run_tests.py  test_pdf_parser.py  test_pdf_parser_simple.py
